--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-audio-waveform": "^0.0.5",
     "react-dom": "^18.2.0",
+    "react-native": "^0.69.2",
     "react-scripts": "5.0.1",
+    "react-wavify": "^1.6.1",
+    "sine-waves": "^0.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
